--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <script src="libraries/p5.sound.min.js"></script>
     <script src="libraries/matter.js"></script>
     <script src="js/ground.js"></script>
+    <script src="js/divisions.js"></script>
+    <script src="js/particle.js"></script>
+    <script src="js/plinko.js"></script>
    
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
@@ -11,6 +14,4 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-  
-
-</body></html>
+  </body></html>
